[package]
name = "nodle-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "Plugin SDK for Nodle node editor - provides interfaces for external node plugins"
license = "MIT"
repository = "https://github.com/your-username/nodle-plugin-sdk"
homepage = "https://github.com/your-username/nodle-plugin-sdk"
documentation = "https://docs.rs/nodle-plugin-sdk"
keywords = ["node-editor", "plugin", "visual-programming", "sdk"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"

[dependencies]
egui = { version = "0.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }